<resources>
    <string name="app_name">Myapp</string>
    <string name="Replay_Sound">Replay Sound</string>
    <string name="change_style">Change Style</string>
    <string name="NextPage">Next Page</string>
    <string name="get_API">Get From API</string>
    <string name="Save">Save</string>
    <string name="Load">Load</string>
    <string name="Previouspage">Previous Page</string>
    <string name="text_">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor  Incididunt ut labore et  dolore magna aliqua.
r </string>
</resources>