<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/text_" />

    <Button
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="400dp"
        android:text="@string/get_API" />



    <Button
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginTop="460dp"
        android:layout_marginLeft="60dp"
        android:text="@string/Save" />

    <Button
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginTop="460dp"
        android:layout_marginLeft="195dp"
        android:text="@string/Load" />

    <Button
        android:id="@+id/previous_page"
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="60dp"
        android:text="@string/Previouspage" />



</RelativeLayout>