<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_id"
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="400dp"
        android:onClick="playSound"
        android:text="@string/Replay_Sound"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="556dp" />

    <Button
        android:id="@+id/change_style"
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="460dp"
        android:text="@string/change_style" />

    <Button
        android:id="@+id/next_page"
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="60dp"
        android:text="@string/NextPage" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="495dp"
        android:layout_height="274dp"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/senku2" />


</RelativeLayout>